# aether

./: .gitattributes  .gitignore  .skyignore  Makefile  README.md  orchestrator.py  pyproject.toml  requirements-gui-only.txt  run_gui.py  run_local.py  run_script_utils.py  setup.py  start_servers.py  start_trainer_client.py  test_failover.py
.github/workflows/: pages-zip.yml
configs/: biggan_cifar.yaml  biggan_imnet.yaml  distilgpt2.yaml  distilgpt2_split.yaml  gcn.yaml  gptneo.yaml  gptneo_small.yaml  gptneo_split.yaml  ppo.yaml  resnet101.yaml  resnet18.yaml  resnet18_split.yaml  resnet50.yaml  resnet50_baseline.yaml  template_config.yaml  wav2vec2.yaml  wav2vec2_split.yaml
docs/: DOCUMENTATION_INDEX.md  QUICK_START.md  QUICK_START_GUI.md  README.md  conf.py
docs/diagrams/: ARCHITECTURE.md  FAILOVER.md  NODE_ARRANGEMENT.md
keys/: Readme
scripts/: benchmark_expert.py  evaluate.py  test_gpt_neo.py  test_ppo.py  test_resnet_50.py
setup_configs/: aws-linux.json  readme.txt  ubuntu-default.json
skypilot/: start_servers.yaml  start_trainer_client.yaml  test_on_single_server.yaml
src/distqat/: __init__.py  attach.py  config.py  data.py  optimizers.py  sharding.py
src/distqat/distributed/: client.py  data_client.py  data_server.py  model.py  monitor.py  param_mirror.py  server.py  trainer.py
src/distqat/func/: __init__.py  kernel.py  layer.py
src/distqat/gui/: colors.py  config.py  controller.py  icons.py  layout.py  machine_setup.py  ssh_runner.py
src/distqat/models/: __init__.py  distilgpt2.py  gcn.py  gpt_neo.py  mlp.py  (+3 more)
tests/: test_data_server.py
(+69 files in other folders)
